<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hello_intents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jgervas.thellointents.HelloIntentsActivity">


    <Button
        android:text="@string/paramI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btInput"
        android:onClick="clickInput"/>

    <Button
        android:text="@string/paramO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btOutput"
        android:onClick="clickOutput"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <Button
        android:text="@string/paramO2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btOutput2"
        android:onClick="clickOutput2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:text="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btPhone"
        android:onClick="clickPhone"/>

    <Button
        android:text="@string/audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAudio"
        android:onClick="clickAudio"/>
</LinearLayout>
